fixing problem with background image on small screen

--- a/finance_web_aplication_bootstrap/app.css
+++ b/finance_web_aplication_bootstrap/app.css
@@ -4,3 +4,30 @@
     background-repeat: no-repeat;
     width: 100vh;
 } */
+
+@media (max-width: 768px) {
+
+    body {
+        background-image: url(img/background_stars2.jpg);
+        height: 100%;
+    }
+
+    #main-container {
+        background-image: url(img/main_menu_graphic_site.png);
+        /* height: 100%; */
+        /* background-repeat: repeat-y; */
+
+    }
+}
+
+@media (min-width: 768px) {
+
+
+
+    #main-container {
+        background-image: url(img/main_menu_graphic_site.png);
+        height: 100vh;
+        /* background-repeat: repeat-y; */
+
+    }
+}
